CHANGES
=======

Version 0.1.2 (2010-??-??)
--------------------------

  - Adds experimental Web Socket service API.

  - Adds command line options to configure the HTTP port and SMTP host.

  - Fixes two issues where some static_dir and static_files handler options
    where misinterpreted.

    - http://code.google.com/p/typhoonae/issues/detail?id=23
    - http://code.google.com/p/typhoonae/issues/detail?id=24

  - Fixes an issue where an incomplete cron.yaml file caused apptool to fail.

    - http://code.google.com/p/typhoonae/issues/detail?id=25

  - Fixes an issue where BlobKey types can't be stored in the mongoDB datastore.

    - http://code.google.com/p/typhoonae/issues/detail?id=28

  - Fixes an issue where the Blobstore API wasn't fully implemented.

    - http://code.google.com/p/typhoonae/issues/detail?id=29


Version 0.1.1 (2009-12-28)
-------------------------- 

  - Supports Google App Engine SDK 1.3.0.

  - Adds support for the new Blobstore API.

  - Adds optional HTTP basic authentication.

  - Fixes an issue where the XMPP/HTTP dispatcher didn't handle unicode.

    - http://code.google.com/p/typhoonae/issues/detail?id=15

  - Fixes an issue where memcache.get_multi(keys) raises a KeyError.

    - http://code.google.com/p/typhoonae/issues/detail?id=16

  - Fixes an issue where the SCRIPT_NAME variable is missing in the CGI
    environment.

    - http://code.google.com/p/typhoonae/issues/detail?id=18

  - Fixes an issue where the login parameter of URL handler definitions in the
    app.yaml configuration file got ignored.

    - http://code.google.com/p/typhoonae/issues/detail?id=20

  - Adds several new command line options to the apptool and fcgiserver.


Version 0.1.0b2 (2009-12-04)
----------------------------

  - Using Google App Engine SDK 1.2.8.

  - Added BDBDatastore support.

  - Fixes an issue where the CURRENT_VERSION_ID variable is missing in the CGI
    environment.

    - http://code.google.com/p/typhoonae/issues/detail?id=8
